Fix spacing in nav items

--- a/_sass/thymeless/_variables.scss
+++ b/_sass/thymeless/_variables.scss
@@ -50,6 +50,7 @@ $screen-xl: 80rem;
   --spacer-2: calc(var(--spacer) * 2);
   --spacer-3: calc(var(--spacer) * 3);
   --spacer-half: calc(var(--spacer) / 2);
+  --spacer-quart: calc(var(--spacer) / 4);
 }
 
 @media (prefers-color-scheme: dark) {
